# MacOS-MCP

./: .gitignore  .mcp.json  .mcpbignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  macos-mcp.mcpb  manifest.json  notebook.ipynb  package.json  pyproject.toml  server.json
.github/workflows/: publish.yml
.pi/extensions/macos-mcp/: index.ts  package-lock.json  package.json
.tau/extensions/macos-mcp/: main.py
docs/: AXTextAttributedString.md  AXValue.md  AXValueConstants.md  pi-integration.md  tau-integration.md
docs/ax/: AXActionConstants.md  AXAttributeConstants.md  AXError.md  AXNotificationConstants.md  AXRoleConstants.md  AXUIElement.md
extensions/: macos-mcp.ts
src/macos_mcp/: __init__.py  __main__.py  permissions.py
src/macos_mcp/ax/: __init__.py  controls.py  core.py  enums.py  events.py
src/macos_mcp/desktop/: __init__.py  service.py  views.py
src/macos_mcp/infrastructure/: __init__.py  analytics.py  config.py
src/macos_mcp/profiling/: __init__.py  desktop_state.py
src/macos_mcp/tree/: config.py  service.py  views.py
src/macos_mcp/watchdog/: service.py
tests/: __init__.py  conftest.py  test_desktop_config.py  test_desktop_service.py  test_desktop_views.py  test_permissions.py  test_profiling.py  test_spaces.py  test_tree_service.py  test_tree_views.py
